0.2.1
-----
  * Python bindings.
  * Caching of dump pages.
  * Improved Doxygen documentation (run 'make doxygen-doc').
  * Private pointer API (kdump_set_priv, kdump_get_priv).
  * Attribute references.
  * Attribute iterators.
  * API and ABI changed:
    - REMOVED callback enumeration.
    - CHANGED the canonical architecture name from "i386" to "ia32".

0.2.0
-----
  * Unit tests (run "make check")
  * API and ABI changed:
    - new names, types and semantics of KDUMP_*ADDR constants for
      kdump_readp() and friends
    - parameters reordered
    - obsolete Xen functions removed
  * differentiation of Xen dump types (attribute "xen.type")
  * support for opening dumps in Xen hypervisor mode
  * many other Xen improvements
  * fix reading LKCD dump files

0.1.7
-----
  * fix build failures

0.1.6
-----
  * metadata is stored as hierarchical attributes which can be enumerated
  * include example code to demonstrate attributes

0.1.5
-----
  * improved support of Xen dumpcore files
  * basic support for MIPS architecture
  * fix support for LKCD dumps on s390x

0.1.4
-----
  * support for IA32 (32-bit x86) architecture
  * verbose error reporting
  * document the public API

0.1.3
-----
  * support S390 dump format
  * new API functions:
    - kdump_pageshift

0.1.2
-----
  * all compression libraries are now optional
  * live source uses VMCOREINFO from the running kernel (if available)
  * full vtop translation for x86_64

0.1.1
-----
  * add missing files
  * fix compiler warnings

0.1
---
  * first public release