@@ -2,6 +2,7 @@
 -----
   * Python bindings.
   * Caching of dump pages.
+  * Thread safety (see threads.md).
   * Improved Doxygen documentation (run 'make doxygen-doc').
   * Private pointer API (kdump_set_priv, kdump_get_priv).
   * Attribute references.
